<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:background="#eee"
	android:orientation="vertical"
	android:gravity="center_horizontal" >
    
    <RelativeLayout 
        android:id="@+id/enroll_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar" >
        
         <Button
            android:id="@+id/login_reback_btn"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="14sp"
            android:textColor="#fff"
            android:background="@drawable/title_btn_back"
            android:text="@string/register_finger_title_back" />
         
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:text="@string/register_finger_title" />
        
        <Button 
            android:id="@+id/login_overflow_btn"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_action_overflow" />
        
    </RelativeLayout>
    
    <RelativeLayout 
    	android:id="@+id/toggle_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/enroll_top_layout"
        android:layout_marginTop="20.0dp" >
    
    	<TextView
	    	android:id="@+id/toggle_text"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_alignBaseline="@+id/toggleBtn"
	    	android:layout_alignParentStart="true"
	    	android:layout_alignParentLeft="true"
	    	android:layout_marginStart="15dp"
	    	android:layout_marginLeft="15dp"
	    	android:text="@string/register_toggle_text"
	    	android:textColor="#000"
	    	android:textSize="19sp" />
    
    	<ToggleButton 
        	android:id="@+id/toggleBtn"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_alignParentEnd="true"
        	android:layout_alignParentRight="true"
        	android:layout_marginEnd="15dp"
	    	android:layout_marginRight="15dp"
        	android:background="@android:color/transparent"
        	android:button="@drawable/switch_btn"
       	 	android:textOn=""
       	 	android:textOff="" />
    	
    </RelativeLayout>
    
    <View 
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/toggle_layout"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="#AAA" />

    <TextView
 		android:id="@+id/registerNumber"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
   		android:layout_marginTop="15dp"
   		android:layout_below="@+id/view"
   		android:gravity="center"
   		android:text="@string/register_finger_tip" 
   		android:textSize="18sp"
  		android:textColor="#000" />       
	
	<ListView 
  		android:id="@+id/listView"
  		android:layout_width="match_parent" 
    	android:layout_height="wrap_content"
   		android:layout_marginLeft="15dp"
     	android:layout_marginRight="15dp"
     	android:layout_marginTop="15dp"
     	android:layout_below="@+id/registerNumber" 
     	android:divider="#eee"
     	android:listSelector="#eee" />
 
	<Button
     	android:id="@+id/register_finger_btn"
     	android:layout_width="fill_parent"
      	android:layout_height="wrap_content"
      	android:background="@drawable/btn_style_green"
      	android:gravity="center"
      	android:layout_marginLeft="24dp"
      	android:layout_marginRight="24dp"
      	android:layout_marginTop="15dp"
      	android:layout_below="@+id/listView"
      	android:text="@string/register_finger_botton"
     	android:textColor="#ffffff"           
	 	android:textSize="18sp" />
	
	<TextView 
	    android:id="@+id/app_version"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_alignParentLeft="true"
		android:layout_above="@+id/sdk_version"
		android:layout_marginStart="15dp"
	    android:layout_marginLeft="15dp"
		android:textSize="18sp"
  		android:textColor="#000" />
	
	<TextView 
	    android:id="@+id/sdk_version"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentBottom="true"
		android:layout_marginStart="15dp"
	    android:layout_marginLeft="15dp"
		android:textSize="18sp"
  		android:textColor="#000" />

</RelativeLayout>